--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <body>
 
     <div class="container">
-        <h1><a href="resume.pdf">个人简历</a></h1>
+        <h1>中间</h1>
     </div>
 
+
+    <!--<a href="resume.pdf">个人简历</a>-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
