简历页面基本写好

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 <body>
 
     <div class="container">
-        <h1 class="center">中间</h1>
+        <div class="jumbotron">
+            <center>
+                <p>网站正在建设中...</p>
+            </center>
+            <center>
+                <a href="resume.pdf">个人简历</a>
+            </center>
+        </div>
     </div>
-
-
-    <!--<a href="resume.pdf">个人简历</a>-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
